ARCHIVE-3:add archive indexer description
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-archive@35538 bab10101-e421-0410-a517-8ce0973de3ef

--- a/src/java/fr/paris/lutece/plugins/archive/ressources/archive_messages_fr.properties
+++ b/src/java/fr/paris/lutece/plugins/archive/ressources/archive_messages_fr.properties
@@ -5,5 +5,7 @@
 # Plugin infos
 plugin.description=Archive
 plugin.provider=Mairie de Paris
-daemon.archiveIndexer.name=Archive
+daemon.archiveIndexer.name=Indexer Archive
+daemon.archiveIndexer.description=Indexer Archive
 archive.message.error_during_download_file=Une erreur c'est produite  durant le téléchagement du fichier
+
