ARCHIVE-4 : Error in the package name "resources"
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-archive@36737 bab10101-e421-0410-a517-8ce0973de3ef

--- a/src/java/fr/paris/lutece/plugins/archive/resources/archive_messages_fr.properties
+++ b/src/java/fr/paris/lutece/plugins/archive/resources/archive_messages_fr.properties
@@ -5,7 +5,12 @@
 # Plugin infos
 plugin.description=Archive
 plugin.provider=Mairie de Paris
+
+################################################################################
+# Daemon
 daemon.archiveIndexer.name=Indexer Archive
 daemon.archiveIndexer.description=Indexer Archive
-archive.message.error_during_download_file=Une erreur c'est produite  durant le téléchagement du fichier
 
+################################################################################
+# Messages
+message.error_during_download_file=Une erreur s'est produite durant le t\u00E9l\u00E9chagement du fichier : il se peut que le fichier ait \u00E9t\u00E9 supprim\u00E9.
